--- a/src/gui/views/ViewSalario.fxml
+++ b/src/gui/views/ViewSalario.fxml
@@ -1,55 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="385.0" prefWidth="355.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewSalarioController">
+<AnchorPane fx:id="apCentral" prefHeight="477.0" prefWidth="348.0" stylesheets="@css/styleViewPagamento.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewSalarioController">
    <children>
-      <GridPane hgap="5.0" layoutX="15.0" layoutY="193.0" prefHeight="129.0" prefWidth="318.0" vgap="10.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" prefWidth="156.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="157.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Funcionário:" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label text="Salário devido:" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <TextField fx:id="tfSalario" minHeight="18.0" minWidth="20.0" prefHeight="25.0" prefWidth="167.0" promptText="Sálario do funcionário" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets right="80.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField fx:id="tfFuncionario" editable="false" promptText="Nome do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="CPF" GridPane.halignment="CENTER" />
-            <TextField fx:id="tfCpf" disable="true" editable="false" promptText="CPF fo funcionário" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets right="50.0" />
-               </GridPane.margin>
-            </TextField>
-            <ComboBox fx:id="cbFormaPagamento" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label text="Forma de Pagamento:" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-         </children>
-      </GridPane>
-      <TableView fx:id="tvFuncionario" layoutX="15.0" layoutY="14.0" onMouseClicked="#selecionaFuncionario" prefHeight="167.0" prefWidth="326.0">
+      <Pane fx:id="paneCentral" layoutX="10.0" layoutY="192.0" opacity="0.49" prefHeight="270.0" prefWidth="329.0" />
+      <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="14.0" onMouseClicked="#selecionaFuncionario" prefHeight="167.0" prefWidth="329.0">
         <columns>
-          <TableColumn fx:id="colunaFuncionario" prefWidth="201.0" text="Funcionário" />
-          <TableColumn fx:id="colunaSalario" prefWidth="124.0" text="Salário" />
+          <TableColumn fx:id="colunaFuncionario" prefWidth="196.0" text="Funcionário">
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_female_worker_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+          <TableColumn fx:id="colunaSalario" prefWidth="119.0" text="Salário">
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_card_payment_40px_1.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
         </columns>
       </TableView>
-      <Button fx:id="btPagar" layoutX="267.0" layoutY="350.0" mnemonicParsing="false" onAction="#onBtPagarAction" text="Pagar" />
+      <JFXTextField fx:id="tfCpf" disable="true" focusColor="WHITE" layoutX="94.0" layoutY="202.0" promptText="CPF fo funcionário">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="tfFuncionario" focusColor="WHITE" layoutX="94.0" layoutY="252.0" promptText="Nome do funcionário">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="tfSalario" focusColor="WHITE" layoutX="94.0" layoutY="304.0" prefHeight="39.0" prefWidth="175.0" promptText="Sálario do funcionário">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </JFXTextField>
+      <JFXComboBox fx:id="cbFormaPagamento" focusColor="WHITE" layoutX="94.0" layoutY="355.0" prefHeight="39.0" prefWidth="209.0" promptText="Forma de Pagamento" />
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_identification_documents_60px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_female_worker_60px_1.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_money_60px_1.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="355.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_card_payment_60px_1.png" />
+         </image>
+      </ImageView>
+      <JFXButton fx:id="btPagar" layoutX="32.0" layoutY="413.0" onAction="#onBtPagarAction" prefHeight="38.0" prefWidth="286.0" text="Pagar" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="26.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_money_60px_1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
    </children>
 </AnchorPane>
