--- a/src/gui/views/ViewPacote.fxml
+++ b/src/gui/views/ViewPacote.fxml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="683.0" stylesheets="@css/styleViewPacote.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="598.0" prefWidth="683.0" stylesheets="@css/styleViewPacote.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
    <children>
       <TabPane layoutX="-5.0" layoutY="-5.0" prefHeight="603.0" prefWidth="690.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -265,25 +259,13 @@
                             </Tab>
                           </tabs>
                         </TabPane>
-                        <GridPane alignment="CENTER_RIGHT" layoutX="505.0" layoutY="243.0" prefHeight="36.0" prefWidth="202.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="149.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="51.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <ProgressIndicator fx:id="piStatus" prefHeight="35.0" prefWidth="38.0" visible="false" GridPane.columnIndex="1" />
-                              <Label fx:id="labelStatus" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="147.0" text="Criando projeto!" textAlignment="RIGHT" visible="false" />
-                           </children>
-                        </GridPane>
-                        <Pane layoutX="-41.0" layoutY="277.0" prefHeight="7.0" prefWidth="112.0" style="-fx-background-color: #2c2e33; -fx-border-color: transparent transparent #cccccc transparent;" />
+                        <Pane layoutX="-41.0" layoutY="277.0" prefHeight="7.0" prefWidth="112.0" style="-fx-background-color: #2c2e33; -fx-border-color: transparent transparent #939393 transparent;" />
                         <Pane layoutX="5.0" layoutY="389.0" prefHeight="141.0" prefWidth="66.0" style="-fx-background-color: #2c2e33;">
                            <children>
                               <Pane layoutX="-282.0" layoutY="-1.0" opacity="0.57" prefHeight="116.0" prefWidth="348.0" style="-fx-border-color: #cccccc; -fx-border-style: solid solid none none;" />
                            </children>
                         </Pane>
+                        <Pane layoutX="1.0" prefHeight="7.0" prefWidth="112.0" style="-fx-background-color: #2c2e33; -fx-border-color: #939393  transparent transparent transparent;" />
                      </children>
                   </AnchorPane>
               </content>
@@ -297,9 +279,10 @@
             </Tab>
             <Tab>
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane fx:id="apPacote2" minHeight="0.0" minWidth="0.0" prefHeight="551.0" prefWidth="690.0">
                      <children>
-                        <TableView fx:id="tvPacotesAssociados" layoutX="10.0" layoutY="10.0" prefHeight="311.0" prefWidth="663.0">
+                        <Pane fx:id="paneCentral" layoutX="-60.0" layoutY="11.0" opacity="0.57" prefHeight="329.0" prefWidth="741.0" style="-fx-border-color: #cccccc;" />
+                        <TableView fx:id="tvPacotesAssociados" layoutX="10.0" layoutY="21.0" prefHeight="311.0" prefWidth="663.0">
                           <columns>
                             <TableColumn fx:id="colunaIdPacoteAssociado" prefWidth="56.0" text="ID" />
                             <TableColumn fx:id="colunaCliente" prefWidth="193.0" text="Cliente" />
@@ -309,47 +292,53 @@
                               <TableColumn fx:id="colunaExcluirPacoteAssociado" prefWidth="65.0" text="Excluir?" />
                           </columns>
                         </TableView>
-                        <Pane layoutX="10.0" layoutY="330.0" prefHeight="135.0" prefWidth="402.0" style="-fx-border-color: #cccccc;">
-                           <children>
-                              <GridPane layoutX="12.0" layoutY="13.0" prefHeight="94.0" prefWidth="267.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="149.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="96.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <TextField fx:id="tfCliente" GridPane.columnIndex="1" />
-                                    <ChoiceBox fx:id="cbPacote" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label text="Cliente" />
-                                    <Label text="Pacote" GridPane.rowIndex="2" />
-                                    <ChoiceBox fx:id="cbFormaDePagamento" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <Label text="Forma de pagamento:" GridPane.rowIndex="1" />
-                                 </children>
-                              </GridPane>
-                              <Button fx:id="btAddAssociacao" layoutX="290.0" layoutY="95.0" mnemonicParsing="false" onAction="#onBtCriaAssociacaoAction" text="Adicionar">
-                                 <graphic>
-                                    <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../model/images/icons8_add_96px_1.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
-                              <Button fx:id="btExcluiAssociacao" layoutX="307.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtExcluiAssociacaoAction" text="Excluir">
-                                 <graphic>
-                                    <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../model/images/icons8_trash_48px.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
-                           </children>
-                        </Pane>
+                        <Pane fx:id="paneCentral" layoutX="-8.0" layoutY="348.0" opacity="0.57" prefHeight="175.0" prefWidth="475.0" style="-fx-border-color: #cccccc;" />
+                        <JFXTextField fx:id="tfCliente" focusColor="WHITE" layoutX="70.0" layoutY="365.0" promptText="Nome Cliente">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXComboBox fx:id="cbFormaDePagamento" focusColor="WHITE" layoutX="71.0" layoutY="417.0" prefHeight="39.0" prefWidth="194.0" promptText="Forma de Pagamento" />
+                        <JFXComboBox fx:id="cbPacote" focusColor="WHITE" layoutX="71.0" layoutY="469.0" prefHeight="39.0" prefWidth="195.0" promptText="Pacote" />
+                        <ImageView fitHeight="41.0" fitWidth="45.0" layoutX="22.0" layoutY="363.0">
+                           <image>
+                              <Image url="@../../model/images/icons8_businesswoman_60px.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="41.0" fitWidth="45.0" layoutX="17.0" layoutY="416.0">
+                           <image>
+                              <Image url="@../../model/images/icons8_card_payment_60px_1.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="37.0" fitWidth="36.0" layoutX="23.0" layoutY="468.0">
+                           <image>
+                              <Image url="@../../model/images/icons8_box_60px_1.png" />
+                           </image>
+                        </ImageView>
+                        <JFXButton fx:id="btAddAssociacao" layoutX="323.0" layoutY="468.0" onAction="#onBtCriaAssociacaoAction" prefHeight="42.0" prefWidth="134.0" text="Adicionar" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="28.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../model/images/add_30px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </JFXButton>
+                        <JFXButton fx:id="btExcluiAssociacao" layoutX="344.0" layoutY="416.0" onAction="#onBtExcluiAssociacaoAction" text="Excluir" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="28.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../model/images/icons8_trash_60px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </JFXButton>
                      </children>
                   </AnchorPane>
             </content>
@@ -363,5 +352,11 @@
             </Tab>
         </tabs>
       </TabPane>
+      <Pane layoutX="108.0" layoutY="-6.0" prefHeight="75.0" prefWidth="579.0" style="-fx-background-color: #2c2e33; -fx-border-color: transparent  transparent #939393 #939393;">
+         <children>
+            <JFXSpinner fx:id="piStatus" layoutX="518.0" layoutY="15.0" visible="false" />
+         </children>
+      </Pane>
+      <Pane layoutY="68.0" prefHeight="7.0" prefWidth="112.0" style="-fx-background-color: #2c2e33; -fx-border-color: #939393  transparent transparent transparent;" />
    </children>
 </AnchorPane>
