--- a/src/gui/views/css/styleViewPacote.css
+++ b/src/gui/views/css/styleViewPacote.css
@@ -2,14 +2,6 @@
 	-fx-background-color: #2c2e33;
 	-fx-border-width: 1;
 	-fx-effect:  dropshadow(three-pass-box, rgba(0.8,0.8,0.8,0.8), 10, 0, 0, 0);
-	
-}
-
-#btCriaCliente{
-	-fx-background-color: #04C582;
-	-fx-background-radius: 5em;
-	-fx-border-radius: 5em;
-	-fx-border-color:  #e1e1e1;
 }
 
 #btAtualizaPacote{
@@ -19,22 +11,6 @@
 	-fx-border-color:  #e1e1e1;
 	-fx-effect:  dropshadow(three-pass-box, rgba(0.8,0.8,0.8,0.8), 10, 0, 0, 0);
 }
-
-#btExcluiCliente, #btLimpar{
-	-fx-background-color: #ff4747;
-	-fx-background-radius: 5em;
-	-fx-border-radius: 5em;
-	-fx-border-color:  #e1e1e1;
-}
-
-#piStatus{
-	-fx-stroke: #ff5b5b;
-}
-
-#btPesquisar:pressed,  #btCriaCliente:pressed{
-	-fx-background-color: #00ff94;
-}
-
 
 .tab:selected {
 	-fx-border-style: solid none none none;
@@ -74,19 +50,35 @@
 	-fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 }
 
-#btExcluiPacote{
+#btExcluiPacote, #btExcluiAssociacao{
 	-fx-background-color: #ff4747;
 	-fx-background-radius: 5em;
 	-fx-border-radius: 5em;
 	-fx-border-color:  #e1e1e1;
-	 -fx-effect:  dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
+	-fx-effect:  dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
 }
 
-#btAddPacote{
+#btAddPacote, #btAddAssociacao{
 	-fx-background-color: #00ff94;
 	-fx-background-radius: 5em;
 	-fx-border-radius: 5em;
 	-fx-border-color:  #e1e1e1;
-	 -fx-effect:  dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
+	-fx-effect:  dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
 }
 
+.combo-box {
+	-fx-border-color:  #545E6A;
+	-fx-text-inner-color:  #00ff94;
+	-fx-prompt-text-fill:  #e1e1e1;
+	-fx-background-color:  #545E6A;
+	-fx-background-radius: 0.5em;
+	-fx-border-radius: 0.5em;
+	-fx-border-color:  #e1e1e1;
+	-fx-font-size: 16px;
+	-fx-font-weight: bold;
+	-fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+}
+
+.jfx-combo-box .cell {
+    -fx-text-fill: #00ff94;
+}
