--- a/src/gui/views/ViewSalario.fxml
+++ b/src/gui/views/ViewSalario.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -11,12 +12,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="apCentral" prefHeight="477.0" prefWidth="348.0" stylesheets="@css/styleViewPagamento.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewSalarioController">
+<AnchorPane fx:id="apCentral" prefHeight="507.0" prefWidth="348.0" stylesheets="@css/styleViewPagamento.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewSalarioController">
    <children>
-      <Pane fx:id="paneCentral" layoutX="10.0" layoutY="192.0" opacity="0.49" prefHeight="270.0" prefWidth="329.0" />
-      <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="14.0" onMouseClicked="#selecionaFuncionario" prefHeight="167.0" prefWidth="329.0">
+      <Pane fx:id="paneCentral" layoutX="10.0" layoutY="227.0" opacity="0.49" prefHeight="270.0" prefWidth="329.0" />
+      <Pane fx:id="paneCentral" layoutX="3.0" layoutY="42.0" opacity="0.49" prefHeight="179.0" prefWidth="342.0" />
+      <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="49.0" onMouseClicked="#selecionaFuncionario" prefHeight="167.0" prefWidth="329.0">
         <columns>
-          <TableColumn fx:id="colunaFuncionario" prefWidth="196.0" text="Funcionário">
+          <TableColumn fx:id="colunaFuncionario" prefWidth="213.0" text="Funcionário">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -24,7 +26,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-          <TableColumn fx:id="colunaSalario" prefWidth="119.0" text="Salário">
+          <TableColumn fx:id="colunaSalario" prefWidth="115.0" text="Salário">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -34,43 +36,43 @@
                </graphic></TableColumn>
         </columns>
       </TableView>
-      <JFXTextField fx:id="tfCpf" disable="true" focusColor="WHITE" layoutX="94.0" layoutY="202.0" promptText="CPF fo funcionário">
+      <JFXTextField fx:id="tfCpf" disable="true" focusColor="WHITE" layoutX="94.0" layoutY="237.0" promptText="CPF fo funcionário">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="tfFuncionario" focusColor="WHITE" layoutX="94.0" layoutY="252.0" promptText="Nome do funcionário">
+      <JFXTextField fx:id="tfFuncionario" focusColor="WHITE" layoutX="94.0" layoutY="287.0" promptText="Nome do funcionário">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="tfSalario" focusColor="WHITE" layoutX="94.0" layoutY="304.0" prefHeight="39.0" prefWidth="175.0" promptText="Sálario do funcionário">
+      <JFXTextField fx:id="tfSalario" focusColor="WHITE" layoutX="94.0" layoutY="339.0" prefHeight="39.0" prefWidth="175.0" promptText="Sálario do funcionário">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </JFXTextField>
-      <JFXComboBox fx:id="cbFormaPagamento" focusColor="WHITE" layoutX="94.0" layoutY="355.0" prefHeight="39.0" prefWidth="209.0" promptText="Forma de Pagamento" />
-      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true">
+      <JFXComboBox fx:id="cbFormaPagamento" focusColor="WHITE" layoutX="94.0" layoutY="390.0" prefHeight="39.0" prefWidth="209.0" promptText="Forma de Pagamento" />
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_identification_documents_60px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="287.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_female_worker_60px_1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_money_60px_1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="355.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="45.0" layoutY="390.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_card_payment_60px_1.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btPagar" layoutX="32.0" layoutY="413.0" onAction="#onBtPagarAction" prefHeight="38.0" prefWidth="286.0" text="Pagar" textFill="WHITE">
+      <JFXButton fx:id="btPagar" layoutX="32.0" layoutY="448.0" onAction="#onBtPagarAction" prefHeight="38.0" prefWidth="286.0" text="Pagar" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -82,5 +84,14 @@
             </ImageView>
          </graphic>
       </JFXButton>
+      <Pane layoutX="-1.0" prefHeight="38.0" prefWidth="348.0" style="-fx-background-color: #ff4747;">
+         <children>
+            <Label layoutX="134.0" layoutY="1.0" text="Salário" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
